--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,10 +1,10 @@
 :root {
-  --primary: #fff;
-  --primary-text: #222;
+  --primary: rgb(32,34,37);
+  --primary-text: #fff;
   --secondary: rgb(251,90,0);
   --secondary-text: #ffffff;
   --accent: #505050;
-  --accent-text: #222;
+  --accent-text: #fff;
   --btn-bg: rgb(28, 32, 48, 85%);
   --btn-text: #fff;
   --btn-border: rgb(251,90,0);
