--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -141,10 +141,11 @@ table {
 
 body {
   margin: 0;
-  font-family: "airstrike", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition: all .2s ease-in-out;
 }
 
 * {
@@ -156,10 +157,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-body::-webkit-scrollbar {
-  display: none;
 }
 
 body {
@@ -177,4 +174,67 @@ div {
   -ms-user-select: none;
   user-select: none;
   -o-user-select: none;
+}
+
+.menu-ul {
+  list-style: none;
+  z-index: 100;
+  display: flex;
+  width: 100%;
+  -moz-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  -ms-transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+.menu-li {
+  font-family: "airstrike";
+  position: relative;
+  margin: 0 6.5px;
+  list-style: none;
+  display: block;
+  float: left;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  -moz-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  -ms-transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+  -moz-transform: translateZ(0) scale(1, 1);
+  -o-transform: translateZ(0) scale(1, 1);
+  -ms-transform: translateZ(0) scale(1, 1);
+  -webkit-transform: translateZ(0) scale(1, 1);
+  transform: translateZ(0) scale(1, 1);
+  cursor: pointer;
+}
+
+.menu-li a {
+  color: rgba(255,255,255,1);
+  text-decoration: none;
+}
+
+.menu-li a:hover {
+  color: rgb(251,90,0, 1);
+  transition: all .2s ease-in-out;
+}
+
+.menu-li a span {
+  position: relative;
+  z-index: 1;
+  padding: 0;
+}
+
+.division {
+  overflow: inherit !important;
+  color: rgb(251,90,0,1);
+}
+
+.menuLinks img:hover {
+  filter: invert(40%) sepia(72%) saturate(1479%) hue-rotate(358deg) brightness(93%) contrast(113%);
+  transform: scale(1.3); 
+  transition: all .2s ease-in-out;
 }
