--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -146,6 +146,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: all .2s ease-in-out;
+  overflow-x: hidden;
 }
 
 * {
